docs: 完善 Java 学习文档内容
- 补充 JVM 编译过程、类加载、内存布局和启动参数详解
- 新增 Maven 依赖管理配置和命令详细说明
- 新增 Gradle build.gradle 配置说明和仓库配置
- 新增 Nexus 私服介绍和使用说明
- 补充 Mybatis 框架介绍和优缺点说明
- 更新 README 目录结构

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>